--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 
 
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
     <script src="js/ai-tracking.js"></script>
     
     <!-- ChatGPT Chat Interface -->
