🔧 FIX: Loading screen stuck issue - removed GSAP dependency and implemented fallback animations

--- a/blog.html
+++ b/blog.html
@@ -398,7 +398,7 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="script.js"></script>
+    <script src="script.js"></script>
     <script src="blog.js"></script>
     <script src="js/ai-tracking.js"></script>
 </body>
