--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="script.js"></script>
+    <script src="script.js"></script>
     <script src="js/ai-tracking.js"></script>
 </body>
 </html>
